Use the current version from describe replicator for update

--- a/aws-msk-replicator/resource-role.yaml
+++ b/aws-msk-replicator/resource-role.yaml
@@ -43,6 +43,7 @@ Resources:
                 - "kafka:DescribeReplicator"
                 - "kafka:GetBootstrapBrokers"
                 - "kafka:ListReplicators"
+                - "kafka:ListTagsForResource"
                 - "kafka:TagResource"
                 - "kafka:UntagResource"
                 - "kafka:UpdateReplicationInfo"
